// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
<Checkbox
  defaultChecked={null}
  disabled={null}
>
  <glamorous(label)>
    <label
      className="css-1dbanec multiple-choice"
    >
      <glamorous(input)
        defaultChecked={null}
        disabled={null}
        type="checkbox"
      >
        <input
          className="css-10svazo"
          defaultChecked={null}
          disabled={null}
          type="checkbox"
        />
      </glamorous(input)>
      <glamorous(span)>
        <span
          className="css-j94lrm"
        >
          example
        </span>
      </glamorous(span)>
    </label>
  </glamorous(label)>
</Checkbox>
`;

exports[`enzyme.render 1`] = `
<label
  class="css-1dbanec multiple-choice"
>
  <input
    class="css-10svazo"
    type="checkbox"
  >
    
  </input>
  <span
    class="css-j94lrm"
  >
    example
  </span>
</label>
`;

exports[`enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(input)
    defaultChecked={null}
    disabled={null}
    type="checkbox"
  />
  <glamorous(span)>
    example
  </glamorous(span)>
</glamorous(label)>
`;
